# aoc-fortran

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  decrypt-aoc.sh  encrypt-aoc.sh  newday.sh  template.F90  utils.F90  utils.f90
.github/workflows/: main.yml
2025/10/: CMakeLists.txt  Makefile  main.F90  main.f90  run.sh
2025/11/: CMakeLists.txt  Makefile  fpm.toml  main.F90  run.sh
2025/7/: CMakeLists.txt  main.F90  run.sh
2025/8/: input.txt.gpg  main.F90  test-input.txt.gpg
src/: CMakeLists.txt  Makefile  args.F90  blarg.F90  fpm.toml  gen.sh  map.F90  map_i32.F90  map_i64.F90  map_str.F90  map_template.F90  sort.F90  utils.F90
template/: flags.cmake  main.F90  template.cmake
test/pips/: CMakeLists.txt  README.md  convert.F90  converter.F90  curl-all.sh  curl-today.sh  main.F90  medium-2025-12-28.txt  pips_io.F90  run-all.sh  test-all.sh
test/pips/inputs/: 2025-12-21.json  2025-12-22.json  2025-12-23.json  2025-12-24.json  2025-12-25.json  2025-12-26.json  2025-12-27.json  2025-12-28.json  2025-12-29-pretty.json  2025-12-29.json  2025-12-30.json  easy-2025-12-28.txt  easy-2025-12-29.txt  easy-2025-12-30.txt  hard-2025-12-26.txt  hard-2025-12-27.txt  hard-2025-12-28.txt  hard-2025-12-29.txt  hard-2025-12-30.txt  medium-2025-12-27.txt  medium-2025-12-30.txt
test/unit/: main.F90
